--- a/index.css
+++ b/index.css
@@ -1,7 +1,51 @@
 body{
-    color: white;
-    background-color: black;
+    color: rgb(7, 6, 6);
+    background-color: rgb(199, 108, 108);
 
 }
- ul
- 
+ ul{
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    align-items: center;
+    padding: 16px;
+ }
+
+ a{
+    color: rgb(8, 4, 4);
+    text-decoration: none;
+ }
+ header img{
+    width: 150px;
+    height: 150px;
+    border-radius:50% ;
+    border: 5px solid rgb(75, 13, 2);
+ }
+ .center{
+    text-align: center;
+ }
+ hi{
+    color: #990e0ec7;
+ }
+ footer img{
+    width: 70px;
+    height: 70px;
+ }
+ footer{
+    display: flex;
+    justify-content: center;
+ }
+ footer a {
+    margin: 20px;
+    text-align:center ;
+
+ }
+ footer p {
+    margin-top: 2px;
+ }
+ .conteiner {
+    padding: 0px 50px;
+ }
+ nav a :hover{
+    color: rgba(216, 177, 176, 0.349);
+ }
